...
    <TextView
        android:id="@+id/welcomeUser_TextView"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:gravity="center"
        android:text="Welcome: "
        app:layout_constraintBottom_toTopOf="@+id/avril_imagebtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/versionCheckMessage" />

    <ImageButton
...
        android:id="@+id/avrilRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:isIndicator="true"
        android:progressTint="@android:color/holo_orange_light"
        app:layout_constraintBottom_toTopOf="@+id/bonjovi_imagebtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avril_imagebtn" />

    <ImageButton
...
